# mass-transcriptor-tauri

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  db.rs  lib.rs  main.rs
src-tauri/src/domain/: assemblyai.rs  grouping.rs  jobs.rs  markdown.rs  mod.rs  models.rs  settings.rs  storage.rs
src/components/: JobStatusBadge.tsx  Layout.tsx  ThemeToggle.tsx  icons.tsx
src/lib/: api.ts  navigation.test.ts  navigation.ts
src/pages/: BatchPage.tsx  JobPage.tsx  JobsPage.tsx  SettingsPage.tsx  UploadPage.tsx
