[package]
name = "mass-transcriptor-tauri"
version = "0.1.0"
description = "Local desktop mass transcription app (Tauri + SQLite, no login)"
authors = ["Mass Transcriptor"]
edition = "2021"

[lib]
name = "mass_transcriptor_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
thiserror = "2"
parking_lot = "0.12"
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
